--- a/home.css
+++ b/home.css
@@ -22,8 +22,8 @@ body {
 }
 
 .cta-btn {
-  padding: 6px 12px;
-  border-radius: 28px;
+  padding: 10px 12px;
+  border-radius: 15px;
   background: #05b0ffdf;
   display: flex;
   align-items: center;
@@ -80,7 +80,7 @@ body {
 
 @media (max-width: 1040px) {
   .cta-btn {
-    padding: 4px 8px;
+    padding: 10px 8px;
   }
 }
 
@@ -92,7 +92,7 @@ body {
     padding: 4px 8px;
   }
   .cta-btn span {
-    padding: 0 18px;
+    padding:10px 5px;
   }
   .cta-btn .arrow {
     height: 32px;
@@ -490,140 +490,87 @@ body {
 
 
 /* ========= Footer Section ========== */
-#footer {
-  min-height: 100vh;
-  /*background: #FAF9F6;*/
-  background: #05b0ffdf;
-  color: #FAF9F6;
-  display: flex;
-  padding-top: 144px;
+
+/* ======- BODY -======*/
+.conatiner-footer{
   position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: #0c0c0c;
+}
+footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #26bdf9;
+    text-align: center;
 }
 
-#footer .footer {
+/* footer text */
+footer div p{
+    font-family: rubik one;
+    letter-spacing: 1px;
+    text-transform: uppercase;
 }
 
-#footer .left {
-  width: 70%;
-  max-width: 70%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+footer div p i.red{
+    color: red;
+    size: 24px;
 }
 
-#footer .left .conclusion {
-  max-width: 550px;
-  margin-left: auto;
-  margin-right: auto;
+/* footer text effects */
+footer div p span{
+    transition: background-color,color 1500ms ease;
+    background-color: black;
+    color: white;
 }
 
-#footer .left .conclusion-text {
-  font-size: 100px;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: -6px;
+footer div p span:hover{
+    background-color:white ;
+    color: black;
 }
 
-#footer .left .conclusion-desc {
-  font-size: 32px;
-  font-weight: 600;
-  text-transform: uppercase;
+/* Footer Image Links */
+footer a.github {
+    -webkit-transition:color 500ms ease;
+    -moz-transition:color 500ms ease;
+    -o-transition:color 500ms ease;
+    transition: color 500ms ease;
+    font-size: 3em;
+    color: rgb(13,38,54);
+    padding: 18px;
+    display:flex;
 }
 
-#footer .left .cta-btns {
-  display: flex;
-  align-items: center;
-  width: 550px;
-  margin-left: auto;
-  margin-right: auto;
+footer a.codepen {
+    -webkit-transition:color 500ms ease;
+    -moz-transition:color 500ms ease;
+    -o-transition:color 500ms ease;
+    transition: color 500ms ease;
+    font-size: 3em;
+    color: black;
+    padding: 10px;
+    display:flex;
 }
 
-#footer .left .cta-btns .cta-btn {
-  background: #00000020;
-  color: #212427;
+/* image links hover effects */
+footer a.github:hover {
+    color: darkgray;
 }
 
-#footer .left .cta-btns .cta-btn .arrow {
-  color: white;
+footer a.codepen:hover {
+    color: darkgray;
 }
 
-#footer .left .cta-btns .cta-btn:nth-of-type(1) {
-  margin-right: 24px;
+/* Resposive Footer */
+footer.mobile {
+    display:none;
 }
 
-#footer .right {
-  width: 30%;
-  max-width: 250px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
 
-#footer .right .right-content {
-  margin-bottom: 32px;
-}
-
-#footer .social-media-links {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  margin-left: -18px;
-  width: 100%;
-}
-
-#footer .social-media-links a {
-  color: #212427;
-  margin: 0 18px;
-}
-
-#footer .social-media-links a i {
-  font-size: 24px;
-}
-@media (max-width: 720px) {
-  #footer {
-    padding-top: 84px;
-    padding-bottom: 84px;
-    min-height: max-content;
-    display: block;
-  }
-  #footer .left {
-    width: 100%;
-    max-width: 100%;
-    display: block;
-  }
-  #footer .left .conclusion {
-    max-width: max-content;
-  }
-  #footer .left .conclusion-text {
-    font-size: 40px;
-    letter-spacing: inherit;
-  }
-  #footer .left .cta-btns {
-    flex-wrap: wrap;
-    width: 100%;
-  }
-  #footer .left .cta-btns .cta-btn {
-    margin-top: 16px;
-  }
-  #footer .right {
-    width: 100%;
-    max-width: max-content;
-    font-size: 12px;
-    margin-top: 44px;
-  }
-  #footer .right .right-content {
-    margin-bottom: 24px;
-  }
-}
-
-@media (max-width: 480px) {
-  #footer .left .cta-btns {
-    display: block;
-  }
-  #footer .social-media-links a i {
-    font-size: 18px;
-  }
-}
 
 
 .centered-list {
@@ -648,12 +595,10 @@ ul, li, a:hover {
   color: #05b0ffdf;
 }
 
-.nav-title {
-  font-size: 24px;
-  font-weight: 600;
-  color: #05b0ffdf;
-  margin-left: 40px;
-  position: relative
+.logo {
+  margin-left: -10px;
+  position: relative;
+  margin-bottom: 16px;
 }
 
 
