--- a/home.css
+++ b/home.css
@@ -870,7 +870,7 @@ figure:hover img {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 0px 4.5rem;
 }
 
 .nav-title {
