--- a/home.css
+++ b/home.css
@@ -505,7 +505,8 @@ footer {
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: #26bdf9;
+    background: rgb(63,186,95);
+background: linear-gradient(90deg, rgba(63,186,95,1) 0%, rgba(3,135,204,1) 40%, rgba(0,212,255,1) 78%);
     text-align: center;
 }
 
@@ -643,7 +644,8 @@ body {
 
 .container-title {
   position: relative;
-  background-color: #1aace5;
+  background: rgb(63,186,95);
+  background: linear-gradient(90deg, rgba(63,186,95,1) 0%, rgba(3,135,204,1) 40%, rgba(0,212,255,1) 78%);
   border-radius: 10px;
   padding: 10px 20px;
   bottom: 4.9em;
@@ -657,7 +659,8 @@ body {
 }
 .testimony-title{
    position: relative;
-  background-color: #1aace5;
+  background: rgb(63,186,95);
+  background: linear-gradient(90deg, rgba(63,186,95,1) 0%, rgba(3,135,204,1) 40%, rgba(0,212,255,1) 78%);
   border-radius: 10px;
   padding: 0px 10px;
   top: 2rem;
